/*
 * $Id: ChangeLog,v 1.267 2002/06/13 22:15:03 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-06-13 15:40 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/classes.c
  * include/hbapi.h
    + Added: hb_objSendMsg( PHB_ITEM pObj, char *cMsg, ULONG ulArg, ... );

    /*
       NOTE: I belive few individuals wrote variations of this function
       PLEASE standardise your code with this API documented function.
    */

  * source/vm/eval.c
    ! Fixed hb_itemDo() and hb_itemDoC() to not require 3rd parameter.

  * source/vm/fastitem.c
    ! Fixed hb_itemPutCPtr() to NOT overiride last char with a NULL Terminator.

  * source/vm/hvm.c
    ! Fixed minor bug in HB_P_LOCALNEARSETINT and HB_P_ADDINT

  * source/vm/arrayshb.c
  * include/cstruct.ch
  * source/rtl/cstruct.prg
    + Added support for nested structures.

  * tests/tstcstru.prg
    * Modified the sample to demo Nested Structures.

  + doc/cstruct.txt
    + New documention for C Structure support.

  /*
     Syntax:
     -------

        Definition:
        -----------
        C STRUCTURE <strucName> [Align <nAlign>]
          MEMBER <memberName>   AS <CTYPEDEF>
          ...
        END C STRUCTURE

        Usage:
        ------

        <lValue> := C STRUCTURE <strucName>

        <strucObj>:<memberName>


     CLASS C Structure:
     ------------------

     Properties:

        acTypes        -> Array Of CTYPE Definitions of Structure Members.
        nAlign         -> [READ ONLY] Alignment attribute of the C Structure.
        SizeOf         -> [READ ONLY] The equivalent of C' sizeof( STRUCTURE ).
        nId            -> [READ ONLY] Unique ID of this Structure.
        InternalBuffer -> [READ ONLY] String reprentation of the C Structure memory image.
